src/regression/parse_pool/libtest3.sfp.out

sfc in library parse_pool/libtest3.sfl
syntax error at line 2, position 17:
use application use $(FENNEC_FOX_LIB)/Application/SimpleBlink
                ^
